[gd_scene load_steps=77 format=2]

[ext_resource path="res://assets/graphic/maribel/MaribelWake_0013.png" type="Texture" id=1]
[ext_resource path="res://assets/graphic/maribel/MaribelWake_0000.png" type="Texture" id=2]
[ext_resource path="res://assets/graphic/maribel/MaribelWake_0002.png" type="Texture" id=3]
[ext_resource path="res://assets/graphic/maribel/MaribelWake_0004.png" type="Texture" id=4]
[ext_resource path="res://assets/graphic/maribel/MaribelWake_0011.png" type="Texture" id=5]
[ext_resource path="res://assets/graphic/maribel/MaribelWake_0018.png" type="Texture" id=6]
[ext_resource path="res://assets/graphic/maribel/MaribelWake_0015.png" type="Texture" id=7]
[ext_resource path="res://game/maribel/MaribelBed.gd" type="Script" id=8]
[ext_resource path="res://game/maribel/animation/maribelsleeping.tres" type="Animation" id=9]
[ext_resource path="res://assets/graphic/maribel/Maribelrolllleft2.png" type="Texture" id=12]
[ext_resource path="res://assets/graphic/maribel/Maribelrolllleft3.png" type="Texture" id=13]
[ext_resource path="res://assets/graphic/maribel/Maribelrolllleft1.png" type="Texture" id=14]
[ext_resource path="res://assets/graphic/maribel/Maribelrolllright3.png" type="Texture" id=15]
[ext_resource path="res://assets/graphic/maribel/Maribelrolllright1.png" type="Texture" id=16]
[ext_resource path="res://assets/graphic/maribel/Maribelrolllright2.png" type="Texture" id=17]
[ext_resource path="res://assets/graphic/maribel/maribelstretch3.png" type="Texture" id=18]
[ext_resource path="res://assets/graphic/maribel/maribelstretch5.png" type="Texture" id=19]
[ext_resource path="res://assets/graphic/maribel/maribelstretch4.png" type="Texture" id=20]
[ext_resource path="res://assets/graphic/maribel/maribelstretch2.png" type="Texture" id=21]
[ext_resource path="res://assets/graphic/maribel/maribelstretch1.png" type="Texture" id=22]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "get_down"
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "get_up"
length = 0.25
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "renkomerrywakeup" ],
"method": "play_audio"
} ]
}

[sub_resource type="Animation" id=50]
resource_name = "roll_left"
length = 2.0
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 1.33333, 1.66667, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=51]
resource_name = "roll_right"
length = 2.0
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 1.33333, 1.66667, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "toggle_light"
length = 2.0
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 1.16667, 1.29167 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 7 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25, 1.29167 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "light_turned_on" ],
"method": "emit_signal"
}, {
"args": [ "light_turned_off" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "toggle_light_post"
length = 0.333333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "toggle_light_pre"
length = 0.333333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=34]
resource_name = "wait"

[sub_resource type="Animation" id=55]
resource_name = "yawn"
length = 2.0
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.375, 0.583333, 1.66667, 1.75, 1.83333, 1.91667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 22 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 22 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.416667 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "merryyawn" ],
"method": "play_audio"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "get_down"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "get_up"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "roll_left"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "roll_right"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "sleeping"

[sub_resource type="AnimationNodeStateMachineTransition" id=58]
switch_mode = 2
advance_condition = "is_roll_left"

[sub_resource type="AnimationNodeStateMachineTransition" id=59]
switch_mode = 2
advance_condition = "is_roll_right"

[sub_resource type="AnimationNodeStateMachineTransition" id=60]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=61]
switch_mode = 2
advance_condition = "is_roll_right"

[sub_resource type="AnimationNodeStateMachineTransition" id=62]
switch_mode = 2
advance_condition = "is_roll_left"

[sub_resource type="AnimationNodeStateMachineTransition" id=63]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachine" id=53]
states/roll_left/node = SubResource( 56 )
states/roll_left/position = Vector2( 444, 29 )
states/roll_right/node = SubResource( 57 )
states/roll_right/position = Vector2( 444, 172 )
states/sleeping/node = SubResource( 52 )
states/sleeping/position = Vector2( 257, 107 )
transitions = [ "sleeping", "roll_left", SubResource( 58 ), "roll_left", "roll_right", SubResource( 59 ), "roll_right", "sleeping", SubResource( 60 ), "sleeping", "roll_right", SubResource( 61 ), "roll_right", "roll_left", SubResource( 62 ), "roll_left", "sleeping", SubResource( 63 ) ]
start_node = "sleeping"
graph_offset = Vector2( -121, -4 )

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "toggle_light"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "toggle_light"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "toggle_light_post"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "toggle_light_pre"

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "toggle_light_pre"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "wait"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "wait"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "yawn"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
advance_condition = "HoldLight"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
advance_condition = "ToggleLight"
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
advance_condition = "NotToggleLight"
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
advance_condition = "NotHoldLight"
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2
advance_condition = "Awake"

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2
advance_condition = "NotToggleLight"

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2
advance_condition = "ToggleLight"

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2
advance_condition = "NotHoldLight"

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2
advance_condition = "HoldLight"

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=64]
switch_mode = 2
advance_condition = "Sleeping"

[sub_resource type="AnimationNodeStateMachineTransition" id=65]
advance_condition = "NotSleeping"

[sub_resource type="AnimationNodeStateMachineTransition" id=68]
switch_mode = 2
advance_condition = "Yawn"

[sub_resource type="AnimationNodeStateMachineTransition" id=69]
switch_mode = 2
advance_condition = "HoldLight"

[sub_resource type="AnimationNodeStateMachineTransition" id=70]
switch_mode = 2
advance_condition = "NotYawn"

[sub_resource type="AnimationNodeStateMachineTransition" id=71]
switch_mode = 2
advance_condition = "Yawn"

[sub_resource type="AnimationNodeStateMachineTransition" id=72]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=73]
switch_mode = 2
advance_condition = "Yawn"

[sub_resource type="AnimationNodeStateMachine" id=26]
states/get_down/node = SubResource( 8 )
states/get_down/position = Vector2( 477, 254 )
states/get_up/node = SubResource( 9 )
states/get_up/position = Vector2( 412, -7 )
states/sleeping/node = SubResource( 53 )
states/sleeping/position = Vector2( 292, 127 )
states/toggle_light/node = SubResource( 11 )
states/toggle_light/position = Vector2( 1193, 116 )
states/toggle_light2/node = SubResource( 43 )
states/toggle_light2/position = Vector2( 1050, 324 )
states/toggle_light_post/node = SubResource( 12 )
states/toggle_light_post/position = Vector2( 753, 254 )
states/toggle_light_pre/node = SubResource( 13 )
states/toggle_light_pre/position = Vector2( 815, -1 )
states/toggle_light_pre2/node = SubResource( 46 )
states/toggle_light_pre2/position = Vector2( 1187, 217 )
states/wait/node = SubResource( 36 )
states/wait/position = Vector2( 899, 127 )
"states/wait 2/node" = SubResource( 35 )
"states/wait 2/position" = Vector2( 616, 136 )
states/yawn/node = SubResource( 67 )
states/yawn/position = Vector2( 616, -66 )
transitions = [ "get_up", "toggle_light_pre", SubResource( 15 ), "toggle_light_pre", "toggle_light", SubResource( 16 ), "toggle_light", "toggle_light_post", SubResource( 17 ), "toggle_light_post", "get_down", SubResource( 18 ), "get_down", "get_up", SubResource( 33 ), "toggle_light_pre", "wait", SubResource( 37 ), "wait", "toggle_light_post", SubResource( 38 ), "wait", "toggle_light", SubResource( 39 ), "get_up", "wait 2", SubResource( 40 ), "wait 2", "get_down", SubResource( 41 ), "wait 2", "toggle_light_pre", SubResource( 42 ), "toggle_light2", "toggle_light_post", SubResource( 45 ), "toggle_light_pre2", "toggle_light2", SubResource( 47 ), "wait 2", "toggle_light_pre2", SubResource( 48 ), "toggle_light_post", "wait 2", SubResource( 49 ), "get_down", "sleeping", SubResource( 64 ), "sleeping", "get_up", SubResource( 65 ), "get_up", "yawn", SubResource( 68 ), "yawn", "toggle_light_pre", SubResource( 69 ), "yawn", "get_down", SubResource( 70 ), "wait 2", "yawn", SubResource( 71 ), "yawn", "wait 2", SubResource( 72 ), "toggle_light_post", "yawn", SubResource( 73 ) ]
start_node = "sleeping"
graph_offset = Vector2( 139, -46 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=27]

[sub_resource type="AnimationNodeStateMachinePlayback" id=66]

[node name="MaribelBed" type="Node2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/get_down = SubResource( 2 )
anims/get_up = SubResource( 3 )
anims/roll_left = SubResource( 50 )
anims/roll_right = SubResource( 51 )
anims/sleeping = ExtResource( 9 )
anims/toggle_light = SubResource( 4 )
anims/toggle_light_post = SubResource( 6 )
anims/toggle_light_pre = SubResource( 5 )
anims/wait = SubResource( 34 )
anims/yawn = SubResource( 55 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 26 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 27 )
parameters/conditions/Awake = false
parameters/conditions/HoldLight = false
parameters/conditions/NotHoldLight = false
parameters/conditions/NotSleeping = false
parameters/conditions/NotToggleLight = false
parameters/conditions/NotYawn = false
parameters/conditions/Sleeping = false
parameters/conditions/ToggleLight = false
parameters/conditions/Yawn = false
parameters/sleeping/playback = SubResource( 66 )
parameters/sleeping/conditions/is_roll_left = false
parameters/sleeping/conditions/is_roll_right = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AwakeTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AwakeTimer" to="." method="_on_AwakeTimer_timeout"]
